// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`"threshold" option matches snapshot for \`0\` value ({Number}): assets 1`] = `
Array [
  Array [
    "09a1a1112c577c2794359715edfcb5ac.png",
    78117,
    Object {
      "immutable": true,
      "related": Object {
        "gzipped": "09a1a1112c577c2794359715edfcb5ac.png.gz",
      },
      "size": 78117,
      "sourceFilename": "icon.png",
    },
  ],
  Array [
    "09a1a1112c577c2794359715edfcb5ac.png.gz",
    73160,
    Object {
      "compressed": true,
      "immutable": true,
      "size": 73160,
    },
  ],
  Array [
    "23fc1d3ac606d117e05a140e0de79806.svg",
    672,
    Object {
      "immutable": true,
      "related": Object {
        "gzipped": "23fc1d3ac606d117e05a140e0de79806.svg.gz",
      },
      "size": 672,
      "sourceFilename": "icon.svg",
    },
  ],
  Array [
    "23fc1d3ac606d117e05a140e0de79806.svg.gz",
    393,
    Object {
      "compressed": true,
      "immutable": true,
      "size": 393,
    },
  ],
  Array [
    "async.async.a48c0e93eef1aa9e4c84.js",
    194,
    Object {
      "chunkhash": "a48c0e93eef1aa9e4c84",
      "immutable": true,
      "javascriptModule": false,
      "related": Object {
        "gzipped": "async.async.a48c0e93eef1aa9e4c84.js.gz",
      },
      "size": 194,
    },
  ],
  Array [
    "async.async.a48c0e93eef1aa9e4c84.js.gz",
    134,
    Object {
      "compressed": true,
      "immutable": true,
      "size": 134,
    },
  ],
  Array [
    "main.cf74b442e1d11f81aa8f.js",
    15998,
    Object {
      "chunkhash": "cf74b442e1d11f81aa8f",
      "immutable": true,
      "javascriptModule": false,
      "related": Object {
        "gzipped": "main.cf74b442e1d11f81aa8f.js.gz",
      },
      "size": 15998,
    },
  ],
  Array [
    "main.cf74b442e1d11f81aa8f.js.gz",
    3974,
    Object {
      "compressed": true,
      "immutable": true,
      "size": 3974,
    },
  ],
]
`;

exports[`"threshold" option matches snapshot for \`0\` value ({Number}): errors 1`] = `Array []`;

exports[`"threshold" option matches snapshot for \`0\` value ({Number}): warnings 1`] = `Array []`;

exports[`"threshold" option matches snapshot for \`8192\` value ({Number}): assets 1`] = `
Array [
  Array [
    "09a1a1112c577c2794359715edfcb5ac.png",
    78117,
    Object {
      "immutable": true,
      "related": Object {
        "gzipped": "09a1a1112c577c2794359715edfcb5ac.png.gz",
      },
      "size": 78117,
      "sourceFilename": "icon.png",
    },
  ],
  Array [
    "09a1a1112c577c2794359715edfcb5ac.png.gz",
    73160,
    Object {
      "compressed": true,
      "immutable": true,
      "size": 73160,
    },
  ],
  Array [
    "23fc1d3ac606d117e05a140e0de79806.svg",
    672,
    Object {
      "immutable": true,
      "size": 672,
      "sourceFilename": "icon.svg",
    },
  ],
  Array [
    "async.async.a48c0e93eef1aa9e4c84.js",
    194,
    Object {
      "chunkhash": "a48c0e93eef1aa9e4c84",
      "immutable": true,
      "javascriptModule": false,
      "size": 194,
    },
  ],
  Array [
    "main.cf74b442e1d11f81aa8f.js",
    15998,
    Object {
      "chunkhash": "cf74b442e1d11f81aa8f",
      "immutable": true,
      "javascriptModule": false,
      "related": Object {
        "gzipped": "main.cf74b442e1d11f81aa8f.js.gz",
      },
      "size": 15998,
    },
  ],
  Array [
    "main.cf74b442e1d11f81aa8f.js.gz",
    3974,
    Object {
      "compressed": true,
      "immutable": true,
      "size": 3974,
    },
  ],
]
`;

exports[`"threshold" option matches snapshot for \`8192\` value ({Number}): errors 1`] = `Array []`;

exports[`"threshold" option matches snapshot for \`8192\` value ({Number}): warnings 1`] = `Array []`;

exports[`"threshold" option should compress all assets excluding assets with "0" bytes original size: assets 1`] = `
Array [
  Array [
    "31d6cfe0d16ae931b73c59d7e0c089c0.txt",
    0,
    Object {
      "immutable": true,
      "size": 0,
      "sourceFilename": "empty.txt",
    },
  ],
  Array [
    "main.5e93d0a19edb5f268be9.js",
    5180,
    Object {
      "chunkhash": "5e93d0a19edb5f268be9",
      "immutable": true,
      "javascriptModule": false,
      "related": Object {
        "gzipped": "main.5e93d0a19edb5f268be9.js.gz",
      },
      "size": 5180,
    },
  ],
  Array [
    "main.5e93d0a19edb5f268be9.js.gz",
    1489,
    Object {
      "compressed": true,
      "immutable": true,
      "size": 1489,
    },
  ],
]
`;

exports[`"threshold" option should compress all assets excluding assets with "0" bytes original size: errors 1`] = `Array []`;

exports[`"threshold" option should compress all assets excluding assets with "0" bytes original size: warnings 1`] = `Array []`;

exports[`"threshold" option should compress all assets including assets with "0" bytes original size: assets 1`] = `
Array [
  Array [
    "31d6cfe0d16ae931b73c59d7e0c089c0.txt",
    0,
    Object {
      "immutable": true,
      "related": Object {
        "gzipped": "31d6cfe0d16ae931b73c59d7e0c089c0.txt.gz",
      },
      "size": 0,
      "sourceFilename": "empty.txt",
    },
  ],
  Array [
    "31d6cfe0d16ae931b73c59d7e0c089c0.txt.gz",
    20,
    Object {
      "compressed": true,
      "immutable": true,
      "size": 20,
    },
  ],
  Array [
    "main.5e93d0a19edb5f268be9.js",
    5180,
    Object {
      "chunkhash": "5e93d0a19edb5f268be9",
      "immutable": true,
      "javascriptModule": false,
      "related": Object {
        "gzipped": "main.5e93d0a19edb5f268be9.js.gz",
      },
      "size": 5180,
    },
  ],
  Array [
    "main.5e93d0a19edb5f268be9.js.gz",
    1489,
    Object {
      "compressed": true,
      "immutable": true,
      "size": 1489,
    },
  ],
]
`;

exports[`"threshold" option should compress all assets including assets with "0" bytes original size: errors 1`] = `Array []`;

exports[`"threshold" option should compress all assets including assets with "0" bytes original size: warnings 1`] = `Array []`;
